app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-user-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homework-user
  template:
    metadata:
      labels:
        app: homework-user
    spec:
      containers:
        - name: homework-user
          imagePullPolicy: Always
          image: grunya404/homework5:latest
          ports:
            - name: http
              containerPort: 8080
