app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-user-service
  namespace: default
spec:
  selector:
    app: homework-user
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
  type: NodePort
