app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress-auth
  namespace: default
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/v1/get_auth
            pathType: Prefix
            backend:
              service:
                name: homework-user-service
                port:
                  number: 8080
          - path: /api/v1/login
            pathType: Prefix
            backend:
              service:
                name: homework-user-service
                port:
                  number: 8080
          - path: /api/v1/logout
            pathType: Prefix
            backend:
              service:
                name: homework-user-service
                port:
                  number: 8080
          - path: /api/v1/register
            pathType: Prefix
            backend:
              service:
                name: homework-user-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress-user
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://homework-user-service.default.svc.cluster.local:8080/api/v1/get_auth
    nginx.ingress.kubernetes.io/auth-response-headers: X-USER-ID
    nginx.ingress.kubernetes.io/auth-cache-duration: 200 1s
    nginx.ingress.kubernetes.io/auth-method: GET

spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: homework-user-service
                port:
                  number: 8080
